Fixed navigation on mobile.

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -33,7 +33,7 @@ body {
   }
 
   &.first {
-    padding-top: 15%;
+    padding-top: 20%;
   }
 
   &.primary {
